--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,42 +1,28 @@
-name: Android APK (no local Gradle)
+
+name: Android APK Build
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout repository
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # Set up JDK 17 (required by Android SDK / Gradle)
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
-          distribution: temurin
-          java-version: 17
+          distribution: 'temurin'
+          java-version: '17'
 
-      # Set up Gradle (downloads & caches Gradle 8.x automatically)
-      - name: Set up Gradle
-        uses: gradle/gradle-build-action@v2
-
-      # Set up Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
-      # Build the debug APK inside android-app/
-      - name: Build debug APK
-        run: |
-          cd android-app
-          gradle assembleDebug
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug
 
-      # Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
