--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -21,10 +21,11 @@ jobs:
         uses: android-actions/setup-android@v3
 
       - name: Build Debug APK
+        working-directory: ./android
         run: ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: BiG-Kelz-debug
-          path: android-app/app/build/outputs/apk/debug/app-debug.apk
+          path: android/app/build/outputs/apk/debug/app-debug.apk
