--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,5 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0'
-    }
-}
-
 plugins {
-    id 'com.android.application'
+    id 'com.android.application' version '8.1.0'
 }
 
 android {
