--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.0
+
       - name: Build Debug APK
         working-directory: ./android
         run: gradle assembleDebug
